# bashdb

./: Makefile.am  configure.ac
command/: Makefile.am
command/info_sub/: Makefile.am
command/set_sub/: Makefile.am
command/show_sub/: Makefile.am
init/: Makefile.am
lib/: Makefile.am
test/integration/: Makefile.am
test/unit/: Makefile.am
