MOSTLYCLEANFILES = *.orig *.rej

pkgdatadir   = ${datadir}/@PACKAGE@/command/info_sub
pkgdata_DATA = \
	args.sh \
	breakpoints.sh \
	display.sh \
	files.sh \
	functions.sh \
	handle.sh \
	line.sh \
	program.sh \
	signals.sh \
	source.sh \
	stack.sh \
	variables.sh \
	warranty.sh \
	watchpoints.sh

EXTRA_DIST = $(pkgdata_DATA)
