MOSTLYCLEANFILES = *.orig *.rej

pkgdatadir   = ${datadir}/@PACKAGE@/command/set_sub
pkgdata_DATA = \
	annotate.sh \
	args.sh \
	autoeval.sh \
	autolist.sh \
	basename.sh \
	debug.sh \
	debugging.sh \
	different.sh \
	dollar0.sh \
	editing.sh \
	highlight.sh \
	history.sh \
	linetrace.sh \
	listsize.sh \
	prompt.sh \
	showcommand.sh \
	trace-commands.sh \
	width.sh

EXTRA_DIST = $(pkgdata_DATA)
