MOSTLYCLEANFILES = *.orig *.rej

pkgdatadir   = ${datadir}/@PACKAGE@/command/show_sub
pkgdata_DATA = \
	alias.sh \
	annotate.sh \
	args.sh \
	autoeval.sh \
	autolist.sh \
	basename.sh \
	commands.sh \
	copying.sh \
	debug.sh \
	different.sh \
	directories.sh \
	editing.sh \
	highlight.sh \
	history.sh \
	listsize.sh \
	prompt.sh \
	version.sh \
	warranty.sh \
	width.sh 

EXTRA_DIST = $(pkgdata_DATA)
